SUBDIRS=Base App Gui Main Mod Tools debian


EXTRA_DIST = \
		Build/FreeCAD.wxs \
		Build/FreeCADBase.wxs \
		Build/FreeCADDoc.wxs \
		Build/FreeCADModules.wxs \
		Build/Install.dsp \
		Build/Install.vcproj \
		Build/LibPackDll.wxi \
		Build/License.rtf \
		Build/ModImage.wxi \
		Build/ModMesh.wxi \
		Build/ModPart.wxi \
		Build/ModPoints.wxi \
		Build/ModRaytracing.wxi \
		All.dsp \
		All.vcproj \
		FreeCAD.dsw \
		FreeCAD.sln \
		ChangeLog.txt \
		copying.lib \
		cvsbuild.sh \
		fc.sh \
		README.Cygwin \
		README.Linux \
		FCConfig.h \
		Version.h
