SUBDIRS=Base App Gui Main Mod Tools debian

EXTRA_DIST = \
		Build/FreeCAD.wxs \
		Build/FreeCADBase.wxs \
		Build/FreeCADDoc.wxs \
		Build/FreeCADModules.wxs \
		Build/Install.dsp \
		Build/Install.vcproj \
		Build/LibPackDll.wxi \
		Build/License.rtf \
		Build/ModImage.wxi \
		Build/ModMesh.wxi \
		Build/ModPart.wxi \
		Build/ModPoints.wxi \
		Build/ModRaytracing.wxi \
		Build/Version.h.in \
		Build/Version.h \
		Build/Version.wxi.in \
		Build/BuildDocDoxy.cfg \
		Build/BuildDocDoxyFull.cfg \
		Build/BuildSourceDoc.dsp \
		Build/BuildSourceDoc.vcproj \
		Build/BuildExtractRevision.dsp \
		Build/BuildExtractRevision.vcproj \
		All.dsp \
		All.vcproj \
		AllCmdFiles.dsp \
		AllCmdFiles.vcproj \
		FreeCAD.dsw \
		FreeCADDist.dsw \
		FreeCAD.sln \
		ChangeLog.txt \
		copying.lib \
		cvsbuild.sh \
		fc.sh \
		README.Cygwin \
		README.Linux \
		FCConfig.h
