SUBDIRS=Base App Gui Main Mod Tools

EXTRA_DIST = \
		Build/FreeCAD.wxs \
		Build/FreeCADBase.wxs \
		Build/FreeCADDoc.wxs \
		Build/FreeCADModules.wxs \
		Build/Install.vcproj \
		Build/LibPackDll.wxi \
		Build/License.rtf \
		Build/ModImage.wxi \
		Build/ModMesh.wxi \
		Build/ModPart.wxi \
		Build/ModPoints.wxi \
		Build/ModRaytracing.wxi \
		Build/Version.h.in \
		Build/Version.h \
		Build/Version.wxi.in \
		Build/BuildDocDoxy.cfg \
		Build/BuildDocDoxyFull.cfg \
		Build/BuildSourceDoc.vcproj \
		Build/BuildExtractRevision.vcproj \
		All.vcproj \
		AllCmdFiles.vcproj \
		fc.sh \
		FCConfig.h
